--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -27,6 +27,15 @@
         <link rel="stylesheet" media="screen" href="media/css/desktop.css" />
     <![endif]-->
     <!-- end scripts -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-91317400-2', 'auto');
+      ga('send', 'pageview');
+    </script>
 </head>
 <body class="{{ page.section }} {{ page.sub-section }}">
 <!-- removing the snap drawer for now
