--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -11,6 +11,7 @@
   <li id="source"><a href="/what/community/source">Source</a>
   <li id="calls"><a href="/what/community/calls">Community Calls</a>
   <li id="scholarships"><a href="/what/community/scholarships">Scholarships</a>
+	<li id="hubs"><a href="/what/community/hubs">Hubs</a>
 
 </ul>
 
