updates adding SRCCON:WORK bits to various pages

--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -1,7 +1,7 @@
 <div id="navlist">
 <h3 class="nav"><a href="/what/conferences">Gatherings</a></h3>
 <ul>
-  <li id="srccon"><a href="/what/conferences/srccon">SRCCON</a></li>
+  <li id="srccon"><a href="/what/conferences/srccon">SRCCON Events</a></li>
   <li id="convenings"><a href="/what/conferences/convenings">Convenings</a></li>
   <li id="mozfest"><a href="/what/conferences/mozfest">MozFest</a></li>
 </ul>
