--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -10,6 +10,7 @@
 <ul>
   <li id="source"><a href="/what/community/source">Source</a>
   <li id="calls"><a href="/what/community/calls">Community Calls</a>
+	<li id="calls"><a href="/what/community/survey">News Nerd Survey</a>
   <li id="scholarships"><a href="/what/community/scholarships">Scholarships</a>
 	<li id="hubs"><a href="/what/community/hubs">Hubs</a>
 
