--- a/media/css/desktop.css
+++ b/media/css/desktop.css
@@ -105,6 +105,18 @@ margin-right: 40px;
 	border-top: none;
 }
 
+a.sidebar-button {
+    border: 0;
+    border-radius: .25em;
+    background-color: #fc6e1f;
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    padding: .67em;
+    line-height: 1;
+    text-align: center;
+    display: block;
+}
 
 
 .multicolumn {
