--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,7 @@
                 <li>Connect on Twitter <a href="http://twitter.com/opennews" class="twitter-follow-button" data-show-count="false">@opennews</a></li>
 
                <li>Join our <a href="http://eepurl.com/czSVTL">mailing lists</a></li>
+							<li><a href="https://opennews.networkforgood.com/projects/54161">Make a donation</a></li>
                 <li><a href="mailto:info@opennews.org">Contact us</a></li>
                 <li><a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a></li>
                 </ul>
