--- a/media/css/devices.css
+++ b/media/css/devices.css
@@ -276,6 +276,19 @@ article header p {
     margin-top: 0;
 }
 
+a.donate-button {
+    border: 0;
+    border-radius: .25em;
+    background-color: #fc6e1f;
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    padding: .67em;
+    line-height: 1;
+    text-align: center;
+    display: block;
+}
+
 div[role="main"] .opengraph a {
 	border-bottom-color: #444444;
 	border-bottom-style: dotted;
