Revert "fucking up buttons now"
This reverts commit 301dcbdf8c1994e05b88cedb90a1c13c68a2b49f.

--- a/media/css/desktop.css
+++ b/media/css/desktop.css
@@ -105,7 +105,7 @@ margin-right: 40px;
 	border-top: none;
 }
 
-a.sidebar-button, a.donate-button {
+a.sidebar-button {
     border: 0;
     border-radius: .25em;
     background-color: #fc6e1f;
