update donation link

--- a/_includes/sidebar_update.html
+++ b/_includes/sidebar_update.html
@@ -1,5 +1,5 @@
 <div id="colleft">
-    <a class="sidebar-button" href="https://opennews.networkforgood.com/projects/54161">Support OpenNews!</a>
+    <a class="sidebar-button" href="https://opennews.networkforgood.com/">Support OpenNews!</a>
 
     <!--{% if page.title != 'Knight-Mozilla OpenNews -- Building an ecosystem for open web development in journalism' %}
     <div id="minifellows">
