fellowships close update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
- <div class="partner">
+ <!--<div class="partner">
    <div id="partnerblock">
             <h3>OpenNews is funded by</h3> <a href="http://www.knightfoundation.org/"><img alt="Knight Foundation" src="/media/img/partners/knight.png" height="50" width="300" /></a>
-              </div>
+              </div>-->
             </div>
         </section>
         <section class="external">
