--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -13,12 +13,7 @@
 	<li id="calls"><a href="/what/community/survey">News Nerd Survey</a>
   <li id="scholarships"><a href="/what/community/scholarships">Scholarships</a>
 	<li id="hubs"><a href="/what/community/hubs">Hubs</a>
-
-</ul>
-
-<h3 class="nav"><a href="/what/fellowships">Fellowships</a></h3>
-<ul>
-  <li id="fellows"><a href="/what/fellowships/community">Meet the Fellows</a></li>
+	<li id="hubs"><a href="/what/fellowships">Fellowships</a>
 </ul>
 
 </div>
