add program page for data review

--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -10,10 +10,11 @@
 <ul>
   <li id="source"><a href="/what/community/source">Source</a>
   <li id="calls"><a href="/what/community/calls">Community Calls</a>
-	<li id="calls"><a href="/what/community/survey">News Nerd Survey</a>
+  <li id="survey"><a href="/what/community/survey">News Nerd Survey</a>
   <li id="scholarships"><a href="/what/community/scholarships">Scholarships</a>
-	<li id="hubs"><a href="/what/community/hubs">Hubs</a>
-	<li id="hubs"><a href="/what/fellowships">Fellowships</a>
+  <li id="datareview"><a href="/what/community/datareview">Peer Data Review</a>
+  <li id="hubs"><a href="/what/community/hubs">Hubs</a>
+  <li id="fellowships"><a href="/what/fellowships">Fellowships</a>
 </ul>
 
 </div>
