--- a/media/css/desktop.css
+++ b/media/css/desktop.css
@@ -75,6 +75,16 @@ nav li {
 	width: 68%;
 	float: left;
 }
+
+.main_col quote {
+  padding-left: 20px;
+  display: block;
+  line-height: 1.6rem;
+  border-left: 8px solid #ffdfce;
+  margin: 30px 0 40px 30px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
 .fellowsbox {
 	padding-bottom: 20px;
 	padding-right: 10px;
