--- a/media/css/devices.css
+++ b/media/css/devices.css
@@ -1300,12 +1300,12 @@ div.main_col {
 	width: 100%;
 }
 
-.main_col quote {
-  padding-left: 20px;
+blockquote.orange-highlight {
+  padding: 0 20px;
   display: block;
   line-height: 1.6rem;
   border-left: 8px solid #ffdfce;
-  margin: 30px 0 40px 30px;
+  margin: 30px 0 40px 10px;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
