--- a/media/css/desktop.css
+++ b/media/css/desktop.css
@@ -82,7 +82,8 @@ blockquote.orange-highlight {
   line-height: 1.6rem;
   border-left: 8px solid #ffdfce;
   margin: 30px 0 40px 30px;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1em;
+  color: #888;
 }
 
 .fellowsbox {
