--- a/media/css/devices.css
+++ b/media/css/devices.css
@@ -1306,7 +1306,8 @@ blockquote.orange-highlight {
   line-height: 1.6rem;
   border-left: 8px solid #ffdfce;
   margin: 30px 0 40px 10px;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1em;
+  color: #888;
 }
 
 .sidebox {
