--- a/_layouts/layout_new.html
+++ b/_layouts/layout_new.html
@@ -10,6 +10,9 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <link rel="icon" href="/favicon.ico" />
+
+    {% include social_meta.html %}
+
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
     <!-- stylesheet calls -->
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
