logging all our divs, added our online join instrux, also figured out the problem was a missing </p> ^_^;

--- a/_layouts/layout_new.html
+++ b/_layouts/layout_new.html
@@ -76,8 +76,8 @@
         <article>
             <div class="main_col">
             {{ content }}
-            </div>
-             <div class="sidebox">
+            </div> <!-- close main_col -->
+            <div class="sidebox">
             {% include sidebar_update.html %}
             </div>
         </article>
