--- a/media/css/standalone_resource.css
+++ b/media/css/standalone_resource.css
@@ -64,7 +64,7 @@ h1, h2, h3, h4 {
     margin: .5em 0 0 -2em;
 }
 .hub .page-intro {
-    text-align: center;
+    text-align: left;
     margin: 0 -4em 1em;
     line-height: 1.3;
 }
