--- a/_layouts/layout_resource.html
+++ b/_layouts/layout_resource.html
@@ -48,7 +48,7 @@
 
     <footer>
         <div class="page-container">
-            <p>Keep in touch: <span class="contact-options"> <a href="https://twitter.com/opennews">Twitter</a> / <a href="mailto:team@opennews.org">Email</a> / <a href="http://eepurl.com/czSVTL">Newsletter</a></span></p>
+            <p>Keep in touch: <span class="contact-options"><a href="https://twitter.com/opennews">Twitter</a> / <a href="mailto:team@opennews.org">Email</a> / <a href="http://eepurl.com/czSVTL">Newsletter</a> / <a href="https://opennews.org/donate">Become a Sustainer</a></span></p>
     
             <p class="trailer"><em>We can be here for each other.</em></p>
         </div>
