add share card tags, update resources in guide

--- a/_includes/social_meta.html
+++ b/_includes/social_meta.html
@@ -1,17 +1,20 @@
-    
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://opennews.org{{ page.url }}" />
     <meta property="og:title" content="{{ page.title }}" />
-    <meta property="og:description" content="{{ page.excerpt }}" />
+    <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt }}{% else %}{% if page.description %}{{ page.description }}{% endif %}{% endif %}" />
     {% if page.image %}
     <meta property="og:image" content="https://opennews.org{{ page.image }}" />
+    {% else %}
+    <meta property="og:image" content="https://opennews.org/media/img/opennews_logo_share.png" />
     {% endif %}
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" value="{{ page.title }}" />
-    <meta name="twitter:description" value="{{ page.excerpt }}" />
+    <meta name="twitter:description" value="{% if page.excerpt %}{{ page.excerpt }}{% else %}{% if page.description %}{{ page.description }}{% endif %}{% endif %}" />
     {% if page.image %}
     <meta name="twitter:image" content="https://opennews.org{{ page.image }}" />
+    {% else %}
+    <meta property="og:image" content="https://opennews.org/media/img/opennews_logo_share.png" />
     {% endif %}
     <meta name="twitter:url" value="https://opennews.org{{ page.url }}" />
     <meta name="twitter:site" value="@opennews" />
