add sidebar link to care package

--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -15,6 +15,7 @@
   <li id="hubs"><a href="/what/community/hubs">Hubs</a>
   <li id="fellowships"><a href="/what/fellowships">Fellowships</a>
   <li id="datareview"><a href="/what/community/datareview">Peer Data Review</a>
+  <li id="care"><a href="/#carepackage">COVID-19 Care Package</a>      
 </ul>
 
 </div>
