--- a/_includes/new_navigation.html
+++ b/_includes/new_navigation.html
@@ -1,8 +1,9 @@
 <div id="navblock">
 <ul>
-<li><a href="/what" class="what">what we do</a></li>
-<li><a href="/who" class="who">who we are</a></li>
+<li><a href="/what" class="what">what<span class="extra"> we do</span></a></li>
+<li><a href="/who" class="who">who<span class="extra"> we are</span></a></li>
 <li><a href="/getinvolved" class="involved">get involved</a></li>
 <li><a href="/blog" class="blog">blog</a></li>
+<li><a href="https://opennews.networkforgood.com/" class="donate">donate</a></li>
 </ul>
 </div>
