--- a/media/css/devices.css
+++ b/media/css/devices.css
@@ -1091,6 +1091,7 @@ article, header, #navblock, #moztab {
 header img {
 		max-width: 600px;
 		margin-top: 35px;
+		/*width: 100%;*/
 }
 
 #kissanenav {
@@ -1109,6 +1110,12 @@ abbr {
 	line-height: 1;
 	margin: 0 auto;
 	padding: 16px 0;
+}
+
+@media only screen and (max-width: 530px) {
+	#kissanenav #navblock .extra {
+		display: none;
+	}
 }
 
 #kissanenav ul {
