--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -1,14 +1,14 @@
 <div id="navlist">
 <h3 class="nav"><a href="/what/conferences">Gatherings</a></h3>
 <ul>
-  <li id="srccon"><a href="/what/conferences/srccon">SRCCON Events</a></li>
+  <li id="srccon"><a href="https://srccon.org">SRCCON Events</a></li>
   <li id="convenings"><a href="/what/conferences/convenings">Convenings</a></li>
   <li id="mozfest"><a href="/what/conferences/mozfest">MozFest</a></li>
 </ul>
 
 <h3 class="nav"><a href="/what/community">Community Support</a></h3>
 <ul>
-  <li id="source"><a href="/what/community/source">Source</a>
+  <li id="source"><a href="https://source.opennews.org/">Source</a>
   <li id="calls"><a href="/what/community/calls">Community Calls</a>
   <li id="survey"><a href="/what/community/survey">News Nerd Survey</a>
   <li id="scholarships"><a href="/what/community/scholarships">Scholarships</a>
