--- a/projects/2020-leavers-survey/assets/css/foundation.css
+++ b/projects/2020-leavers-survey/assets/css/foundation.css
@@ -253,7 +253,8 @@ blockquote,
 th,
 td {
   margin: 0;
-  padding: 0; }
+  padding: 0; 
+  }
 
 p {
   margin-bottom: 1rem;
@@ -297,7 +298,7 @@ h6, .h6 {
 
 .h1a, ..h1a {
   font-size: 1.5rem;
-  line-height: 1.3;
+  line-height: 1.1;
   margin-top: 0;
   margin-bottom: 0.5rem; }
 
@@ -333,6 +334,8 @@ h6, .h6 {
 
 @media print, screen and (min-width: 40em) {
   .h1a, ..h1a {
+    font-size: 3rem; }
+  h1, .h1 {
     font-size: 3rem; }
   h2, .h2 {
     font-size: 2.5rem; }
@@ -715,10 +718,10 @@ ul.no-bullet, ol.no-bullet {
   float: left; }
   .tabs-title > a {
     display: block;
-    padding: 1.25rem 1.5rem;
+    padding: 1.0rem 1.1rem;
     font-size: 0.95rem;
     line-height: 1;
-    color: #5ce5d5; }
+    color: #0080ff; }
     [data-whatinput='mouse'] .tabs-title > a {
       outline: 0; }
     .tabs-title > a:hover {
@@ -726,7 +729,7 @@ ul.no-bullet, ol.no-bullet {
       color: #a8fa11; }
     .tabs-title > a:focus, .tabs-title > a[aria-selected='true'] {
       background: #e6e6e6;
-      color: #5ce5d5; }
+      color: #2e9b92; }
 
 .tabs-content {
   /*border: 1px solid #e6e6e6;*/
