--- a/_layouts/layout_resource.html
+++ b/_layouts/layout_resource.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <title>{% if page.title %}{{ page.title }} | {% endif %}OpenNews</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism. OpenNews believes that a community of peers working, learning, and solving problems together can create a stronger, more responsive journalism ecosystem.{% endif %}">
+    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism. Alongside our community, our mission includes fighting for a future where newsrooms are anti-racist, equitable, inclusive, and collaborative.{% endif %}">
 
     {% include social_meta.html %}
 
