--- a/_layouts/layout_new.html
+++ b/_layouts/layout_new.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>{{ page.title }} | OpenNews</title>
     <link rel="alternate" type="application/atom+xml" title="Atom 0.3"  href="http://planet.opennews.org/rss" />
-    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism. OpenNews believes that a community of peers working, learning, and solving problems together can create a stronger, more responsive journalism ecosystem.{% endif %}">
+    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism. Alongside our community, our mission includes fighting for a future where newsrooms are anti-racist, equitable, inclusive, and collaborative.{% endif %}">
     <meta name="google-site-verification" content="Oihs9U6lTT_2lL8pr9cerGk5aIZqOjDES4sZ4Lg3sYI" />
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
