moving covid care package to its own page

--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -1,4 +1,5 @@
 <div id="navlist">
+
 <h3 class="nav"><a href="/what/conferences">Gatherings</a></h3>
 <ul>
   <li id="srccon"><a href="https://srccon.org">SRCCON Events</a></li>
@@ -15,7 +16,7 @@
   <li id="hubs"><a href="/what/community/hubs">Hubs</a>
   <li id="fellowships"><a href="/what/fellowships">Fellowships</a>
   <li id="datareview"><a href="/what/community/datareview">Peer Data Review</a>
-  <li id="care"><a href="/#carepackage">COVID-19 Care Package</a>      
+  <li id="care"><a href="/what/community/covid19-care-package">COVID-19 Care Package</a>      
 </ul>
 
 </div>
