what a website with our srccon fonts would look like

--- a/_layouts/layout_new.html
+++ b/_layouts/layout_new.html
@@ -22,6 +22,8 @@
     <!-- script calls -->
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="//www.google.com/jsapi"></script>
+    <script src="//use.typekit.net/mvg8obr.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
 
     <!--[if lt IE 9]>
         <script type="text/javascript" src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
