--- a/media/css/devices.css
+++ b/media/css/devices.css
@@ -6,7 +6,7 @@ Default template CSS - if you change anything here then updating will be a bit m
 	src: url(../fonts/MetaWebPro-Black.woff) format('woff');
 }
 body {
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: sofia-pro, Helvetica, Arial, sans-serif;
 	color: #515151
 }
 a:link,
@@ -96,11 +96,11 @@ aside {
 /* External links */
 .external {
 	background-color: #FFFFFF;
-	font-family: Georgia;
+	font-family: "freight-text-pro", Georgia;
 }
 .external h2 {
 	padding-top: 40px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'sofia-pro','Open Sans', sans-serif;
 	color: #2e2e2d;
 	text-transform: uppercase;
 	font-size: 18px;
@@ -139,7 +139,7 @@ aside {
 .partners h2 {
 	float: left;
 	margin: 1em 0 0; /* 1em = 18px; */
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'sofia-pro','Open Sans', sans-serif;
 	font-weight: 300;
 	text-transform: uppercase;
 	font-size: 18px;
@@ -175,13 +175,13 @@ div[role="main"] h1,
 div[role="main"] h2 {
 	text-transform: capitalize;
 	color: #fc6e1f;
-	font-family: "Open Sans", Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", "Open Sans", Helvetica, Verdana, Arial, sans-serif;
 	font-weight: 400;
 }
 article p,
 article ul,
 article ol {
-	font-family: Georgia, "Times New Roman", Times, serif;
+	font-family: "freight-text-pro", Georgia, "Times New Roman", Times, serif;
 	line-height: 1.6;
 	font-size: 18px;
 }
@@ -199,7 +199,7 @@ article header p {
 	color: #676767;
 	font-size: 17px;
 	line-height: 1.1em;
-	font-family: "Open Sans", Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", "Open Sans", Helvetica, Verdana, Arial, sans-serif;
 	font-weight: 300;
 }
 .fellowsbox ul {
@@ -223,7 +223,7 @@ article header p {
 	margin-right:10px;
 }
 .fellowsbox p.fn {
-	font-family: Helvetica;
+	font-family: "sofia-pro", Helvetica;
 	font-size: 16px;
 	font-weight: bold;
 	margin-bottom: 0;
@@ -250,7 +250,7 @@ article header p {
 }
 .external p, .external ul {
 	line-height: 1.3em;
-	font-family: Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", Helvetica, Verdana, Arial, sans-serif;
 }
 .external iframe {
 	display: inline-block;
@@ -264,7 +264,7 @@ article header p {
 
 #involved ul, #involved p, #newsbox ul, #sourcebox ul, #sidenav ul {
 	font-size: 1em;
-	font-family: Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", Helvetica, Verdana, Arial, sans-serif;
 }
 
 #involved li, #newsbox li, #sourcebox li {
@@ -300,7 +300,7 @@ div.article_body {
 	margin-bottom: 50px;
 }
 #newsline {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'sofia-pro','Open Sans', sans-serif;
 	font-size: 18px;
 	text-align: center;
 	border: 1px solid rgb(198, 198, 198);
@@ -341,7 +341,7 @@ height: 20%;
 
 #minifellows p, #involved p, #newsbox p, #sourcebox p {
 font-size: 0.9em;
-font-family: Helvetica, Verdana, Arial, sans-serif;
+font-family: "sofia-pro", Helvetica, Verdana, Arial, sans-serif;
 }
 
 .fellowspage {
@@ -355,7 +355,7 @@ table  {
 	width: 80%;
 	line-height: 1.6em;
 	font-size: 18px;
-	font-family: Georgia, "Times New Roman", Times, serif;
+	font-family: "freight-text-pro", Georgia, "Times New Roman", Times, serif;
 }
 
 table tr  {
@@ -417,7 +417,7 @@ margin-bottom: 35px;
 }
 
 #nav {
-	font-family: Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", Helvetica, Verdana, Arial, sans-serif;
 	display: none;
 }
 #nav ul {
@@ -503,7 +503,7 @@ width: 98%;
 
 h3, h4 {
 color: #0d0d0d;
-font-family: 'Open Sans', Helvetica, Verdana, Arial, sans-serif;
+font-family: 'sofia-pro','Open Sans', Helvetica, Verdana, Arial, sans-serif;
 font-weight: 300;
 font-size: 1.1em;
 margin-top: 30px;
@@ -528,7 +528,7 @@ padding-bottom: 5px;
 padding-top: 18px;
 margin: 0px;
 margin-bottom: 20px;
-font-family: Helvetica, Verdana, Arial, sans-serif;
+font-family: "sofia-pro", Helvetica, Verdana, Arial, sans-serif;
 width: 100%;
 margin-top: 20px;
 border-top: 1px solid #C6C6C6;
@@ -554,7 +554,7 @@ border-top: 1px solid #C6C6C6;
 	padding-top: 0px;
 	display: inline;
 	font-size: 0.8em;
-	font-family: Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", Helvetica, Verdana, Arial, sans-serif;
 	list-style-type: none;
 }
  #fellowside li:last-child {
@@ -728,7 +728,7 @@ background: url("/media/img/partner_strip-2015.png") no-repeat scroll 0px -420px
 }
 
 ul.fellowslist, ul.fellowstats {
-	font-family: Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", Helvetica, Verdana, Arial, sans-serif;
 	margin: 0;
 	padding: 0;
 }
@@ -794,7 +794,7 @@ form.fr_form div.fr_description, span.fr_min_max_guide {
   margin-top: 10px;
   line-height: 1.4em;
   color: grey;
-	font-family: helvetica, sans-serif;
+	font-family: "sofia-pro", helvetica, sans-serif;
 	font-size: .8em;
 }
 
@@ -890,7 +890,7 @@ legend span {
 	padding-top: 1em;
 	color: #FC6E1F;
 	text-transform: capitalize;
-	font-family: 'Open Sans',Helvetica,Verdana,Arial, sans-serif;
+	font-family: 'sofia-pro','Open Sans',Helvetica,Verdana,Arial, sans-serif;
 	font-size: 20px;
 	font-weight: 300;
 }
@@ -910,7 +910,7 @@ font-size: 14px;
 }
 
 #hackcode ul {
-	font-family: Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", Helvetica, Verdana, Arial, sans-serif;
 	padding: 0px;
 }
 
@@ -928,7 +928,7 @@ font-size: 14px;
 }
 
 .fellowhack {
-	font-family: Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", Helvetica, Verdana, Arial, sans-serif;
 	font-size: 1.1em;
 }
 
@@ -956,7 +956,7 @@ font-size: 14px;
 }
 
 .alert {
-	font-family: 'Open Sans',Helvetica,Verdana,Arial, sans-serif;
+	font-family: 'sofia-pro','Open Sans',Helvetica,Verdana,Arial, sans-serif;
 	background-color: #b54f06;
 	color: white;
 	font-weight: bold;
@@ -969,7 +969,7 @@ font-size: 14px;
 }
 
 .trailer {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'sofia-pro','Open Sans', sans-serif;
     font-size: .8em;
     border-top: 1px solid #888;
     margin-top: 1.5em;
@@ -1161,18 +1161,18 @@ article h1,
 article h2 {
 	text-transform: capitalize;
 	color: #fc6e1f;
-	font-family: "Open Sans", Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", "Open Sans", Helvetica, Verdana, Arial, sans-serif;
 	font-weight: 400;
 }
 article p,
 article ul {
-	font-family: Georgia, "Times New Roman", Times, serif;
+	font-family: "freight-text-pro", Georgia, "Times New Roman", Times, serif;
 	line-height: 1.6;
 	font-size: 18px;
 }
 
 blockquote {
-	font-family: "Open Sans", Helvetica, Verdana, Arial, sans-serif;
+	font-family: "sofia-pro", "Open Sans", Helvetica, Verdana, Arial, sans-serif;
 	line-height: 1.7em;
 	font-size: 1.1em;
 
@@ -1220,7 +1220,7 @@ ul.bloglist li p.excerpt {
 
 #newsbox ul, #sourcebox ul {
 		font-size: 1em;
-		font-family: Helvetica,Verdana,Arial,sans-serif;
+		font-family: "sofia-pro", Helvetica,Verdana,Arial,sans-serif;
 		margin-left: 0px;
 		padding-left: 0px;
 }
