--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -1,5 +1,5 @@
 <div id="navlist">
-    <h3 class="nav"><a href="/what/conferences">Gatherings</a></h3>
+    <h3 class="nav"><a href="/what/conferences">Our Gatherings</a></h3>
     <ul>
         <li id="srccon"><a href="https://srccon.org">SRCCON Events</a></li>
         <li id="convenings"><a href="/what/conferences/convenings">Convenings</a></li>
