--- a/_includes/sidebar_update.html
+++ b/_includes/sidebar_update.html
@@ -1,7 +1,7 @@
 <div id="colleft">
     <a class="sidebar-button" href="https://opennews.networkforgood.com/">Become a sustainer</a>
     <div id="sidenav">
-        <h3>Learn More About...</h3>
+        <!-- <h3>Learn More About...</h3> -->
         {% include sidebar_nav.html %}
     </div>
 </div>
