--- a/_layouts/blogpost.html
+++ b/_layouts/blogpost.html
@@ -4,7 +4,7 @@ layout: layout_new
 
 <h2>{{ page.title }}</h2>
 
-<h3>by {{ page.author }}</h3>
+<h3 class="byline">by {{ page.author }}</h3>
 
 <div class="article_body">
     {{ content }}
