indenting in the sidebar nav

--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -15,6 +15,7 @@
         <li id="hubs"><a href="/what/community/hubs">Hubs</a>
         <li id="fellowships"><a href="/what/fellowships">Fellowships</a>
         <li id="datareview"><a href="/what/community/datareview">Peer Data Review</a>
-        <li id="care"><a href="/what/community/covid19-care-package">COVID-19 Care Package</a>      
+        <li id="care"><a href="/what/community/covid19-care-package">COVID-19 Care Package</a> 
+        <li id="dei-coalition"><a href="/what/community/dei-coalition">DEI Coalition for Anti-Racist, Equitable, and Just Newsrooms</a>      
     </ul>
 </div>
