--- a/_includes/sidebar_update.html
+++ b/_includes/sidebar_update.html
@@ -1,5 +1,5 @@
 <div id="colleft">
-    <a class="sidebar-button" href="https://opennews.networkforgood.com/">Become a sustainer</a>
+    <a class="sidebar-button" href="https://opennews.networkforgood.com/">Become a Sustainer</a>
     <div id="sidenav">
         <!-- <h3>Learn More About...</h3> -->
         {% include sidebar_nav.html %}
