--- a/_layouts/layout_new.html
+++ b/_layouts/layout_new.html
@@ -14,7 +14,8 @@
     {% include social_meta.html %}
 
     <!-- stylesheet calls -->
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+    <!-- <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'> -->
+    <link rel="stylesheet" href="https://use.typekit.net/npu3izb.css">
     <link rel="stylesheet" media="screen,projection,tv" href="/media/css/normalise.css" />
     <link rel="stylesheet" media="screen,projection,tv" href="/media/css/devices.css" />
     <link rel="stylesheet" media="all and (min-width:30em)" href="/media/css/desktop.css" />
@@ -22,9 +23,6 @@
     <!-- script calls -->
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="//www.google.com/jsapi"></script>
-    <script src="//use.typekit.net/mvg8obr.js"></script>
-    <script>try{Typekit.load();}catch(e){}</script>
-
     <!--[if lt IE 9]>
         <script type="text/javascript" src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <link rel="stylesheet" media="screen" href="media/css/desktop.css" />
