--- a/media/css/desktop.css
+++ b/media/css/desktop.css
@@ -76,7 +76,7 @@ nav li {
 	float: left;
 }
 
-blockquote.orange-highlight {
+/*blockquote.orange-highlight {
   padding: 0 20px;
   display: block;
   line-height: 1.6rem;
@@ -84,7 +84,7 @@ blockquote.orange-highlight {
   margin: 30px 0 40px 30px;
   font-size: 1.2em;
   color: #888;
-}
+}*/
 
 small {
 	font-size: 1rem;
