making our headline capitalization style consistent versus sisi's posts being different, but also making sure the style is the same no matter if the headline is on the homepage, at the top of the article, or in the sidebar

--- a/_layouts/blogpost.html
+++ b/_layouts/blogpost.html
@@ -2,7 +2,7 @@
 layout: layout_new
 ---
 
-<h2>{{ page.title }}</h2>
+<h2 class="headline">{{ page.title }}</h2>
 
 <h3 class="byline">by {{ page.author }}</h3>
 
