update srccon heart image on homepage

--- a/_includes/social_meta.html
+++ b/_includes/social_meta.html
@@ -14,7 +14,7 @@
     {% if page.image %}
     <meta name="twitter:image" content="https://opennews.org{{ page.image }}" />
     {% else %}
-    <meta property="og:image" content="https://opennews.org/media/img/opennews_logo_share.png" />
+    <meta property="twitter:image" content="https://opennews.org/media/img/opennews_logo_share.png" />
     {% endif %}
     <meta name="twitter:url" value="https://opennews.org{{ page.url }}" />
     <meta name="twitter:site" value="@opennews" />
