--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -11,7 +11,7 @@
         <li id="source"><a href="https://source.opennews.org/">Source</a>
         <li id="calls"><a href="/what/community/calls">Community Calls</a>
         <li id="survey"><a href="/what/community/survey">News Nerd Survey</a>
-        <li id="scholarships"><a href="/what/community/scholarships">Scholarships</a>
+        <li id="scholarships"><a href="/what/community/scholarships">Scholarships+</a>
         <li id="hubs"><a href="/what/community/hubs">Hubs</a>
         <li id="fellowships"><a href="/what/fellowships">Fellowships</a>
         <li id="datareview"><a href="/what/community/datareview">Peer Data Review</a>
