adding footer desktop styles

--- a/_layouts/layout_new.html
+++ b/_layouts/layout_new.html
@@ -17,6 +17,7 @@
     <!-- <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'> -->
     <link rel="stylesheet" href="https://use.typekit.net/npu3izb.css">
     <link rel="stylesheet" media="screen,projection,tv" href="/media/css/normalise.css" />
+    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" media="screen,projection,tv" href="/media/css/devices.css" />
     <link rel="stylesheet" media="all and (min-width:30em)" href="/media/css/desktop.css" />
 
