--- a/_includes/new_navigation.html
+++ b/_includes/new_navigation.html
@@ -1,8 +1,8 @@
 <div id="navblock">
 <ul>
-<li><a href="/">&#127968;</a></li>
-<li><a href="/what" class="what">our programs</a></li>
-<li><a href="/who" class="who">about us</a></li>
+<li class="home-logo"><a href="/"><img src="/media/img/ONlogo_justO_white.png"></a></li>
+<li><a href="/what" class="what"><span class="extra">our</span> programs</a></li>
+<li><a href="/who" class="who">about <span class="extra">us</span></a></li>
 <li><a href="/getinvolved" class="involved">get involved</a></li>
 <li><a href="https://opennews.networkforgood.com/" class="donate">donate</a></li>
 </ul>
