last two homepage edits

--- a/_includes/homepage_quote.html
+++ b/_includes/homepage_quote.html
@@ -1,1 +1,1 @@
-<p class="homepage-quote-big">We make it easier for people to collaborate across organizations and build a more equitable future for jounalism. We create space for much-needed <a href="https://srccon.org/">conversations at SRCCONs</a>, help journalists TK language. <a href="/getinvolved">Join us.</a></p>
+<p class="homepage-quote-big">We make it easier for people to collaborate across organizations and build a more equitable future for jounalism. <a href="/getinvolved">Join us.</a></p>
